@@ -1,12 +1,9 @@
 package org.opendcs.database.impl.opendcs.dao;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.jdbi.v3.core.Handle;
-import org.jdbi.v3.core.generic.GenericType;
 import org.opendcs.database.api.DataTransaction;
 import org.opendcs.database.api.DatabaseEngine;
 import org.opendcs.database.api.OpenDcsDataException;
@@ -16,20 +13,20 @@ import org.opendcs.database.model.mappers.equipmentmodel.EquipmentModelMapper;
 import org.opendcs.database.model.mappers.equipmentmodel.EquipmentModelReducer;
 import org.opendcs.database.model.mappers.properties.PropertiesMapper;
 import org.opendcs.utils.sql.GenericColumns;
+import org.opendcs.utils.sql.SqlErrorMessages;
 import org.opendcs.utils.sql.SqlKeywords;
 
 import decodes.db.DatabaseException;
 import decodes.db.EquipmentModel;
 import decodes.sql.DbKey;
 import decodes.sql.KeyGenerator;
-import ilex.util.Pair;
 
 public class EquipmentModelImpl implements EquipmentModelDao
 {
+    private static final String propsDeleteSql = "delete from equipmentproperty where equipmentid = :id";
+
     private final OpenDcsDatabase db;
     private final KeyGenerator keyGen;
-
-    private final String propsDeleteSql = "delete from equipmentproperty where equipmentid = :id";
 
     public EquipmentModelImpl(OpenDcsDatabase db)
     {
@@ -43,7 +40,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
             throws OpenDcsDataException
     {
         var handle = tx.connection(Handle.class)
-                       .orElseThrow(() -> new OpenDcsDataException("Unable to get Database connection object."));
+                       .orElseThrow(() -> new OpenDcsDataException(SqlErrorMessages.NO_JDBI_HANDLE));
 
         final String queryText = """
                   with em (id, name, company, model, description, equipmentType) as (
@@ -72,10 +69,10 @@ public class EquipmentModelImpl implements EquipmentModelDao
             }
             return query.define("limit", addLimitOffset(limit, offset))
                         .registerRowMapper(EquipmentModelMapper.withPrefix("e"))
-                        .registerRowMapper(new GenericType<Pair<String,String>>(){}, PropertiesMapper.withPrefix("p"))
+                        .registerRowMapper(PropertiesMapper.PAIR_STRING_STRING, PropertiesMapper.withPrefix("p"))
                         .reduceRows(new EquipmentModelReducer("e", "p"))
                         .map(m -> m)
-                        .collect(Collectors.toList());
+                        .toList();
         }
     }
 
@@ -96,7 +93,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
     public Optional<EquipmentModel> getEquipmentModel(DataTransaction tx, DbKey id) throws OpenDcsDataException
     {
         var handle = tx.connection(Handle.class)
-                       .orElseThrow(() -> new OpenDcsDataException("No Jdbi Handle available."));
+                       .orElseThrow(() -> new OpenDcsDataException(SqlErrorMessages.NO_JDBI_HANDLE));
         final var emQuerySQL = """
                 select em.id e_id, em.name e_name, em.company e_company, em.model e_model, em.description e_description,
                        em.equipmentType e_equipmentType, p.name p_name, p.prop_value p_prop_value
@@ -109,7 +106,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
         {
             return emQuery.bind("id", id)
                           .registerRowMapper(EquipmentModelMapper.withPrefix("e"))
-                          .registerRowMapper(new GenericType<Pair<String,String>>(){}, PropertiesMapper.withPrefix("p"))
+                          .registerRowMapper(PropertiesMapper.PAIR_STRING_STRING, PropertiesMapper.withPrefix("p"))
                           .reduceRows(new EquipmentModelReducer("e", "p"))
                           .map(m -> m)
                           .findFirst();
@@ -144,7 +141,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
     public void deleteEquipmentModel(DataTransaction tx, DbKey id) throws OpenDcsDataException
     {
         var handle = tx.connection(Handle.class)
-                       .orElseThrow(() -> new OpenDcsDataException("No Jdbi Handle available."));
+                       .orElseThrow(() -> new OpenDcsDataException(SqlErrorMessages.NO_JDBI_HANDLE));
         final var deleteEquipmentModelSql = "delete from equipmentmodel where id = :id";
         try (var deleteProps = handle.createUpdate(propsDeleteSql);
              var deleteEquipmentModel = handle.createUpdate(deleteEquipmentModelSql))
@@ -159,8 +156,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
     {
 
         var handle = tx.connection(Handle.class)
-                       .orElseThrow(() -> new OpenDcsDataException("No Jdbi Handle available."));
-
+                       .orElseThrow(() -> new OpenDcsDataException(SqlErrorMessages.NO_JDBI_HANDLE));
         var emMergeSql = """
                 merge into equipmentmodel em
                 using (select :id id, :name name, :company company, :model model, :description description, :equipmentType equipmentType <dual>) input
@@ -177,7 +173,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
         try (var emMerge = handle.createUpdate(emMergeSql)
                                  .define("dual", db.getDatabase() == DatabaseEngine.ORACLE ? "from dual" : "");
              var propsDelete = handle.createUpdate(propsDeleteSql);
-             var insertProps = handle.prepareBatch(insertPropsSql);)
+             var insertProps = handle.prepareBatch(insertPropsSql))
         {
             final DbKey id = em.idIsSet() ? em.getId() : keyGen.getKey("equipmentmodel", handle.getConnection());
             emMerge.bind(GenericColumns.ID, id);
@@ -202,7 +198,7 @@ public class EquipmentModelImpl implements EquipmentModelDao
         }
         catch (DatabaseException ex)
         {
-            throw new OpenDcsDataException("Unable to generate key to save enum", ex);
+            throw new OpenDcsDataException("Unable to generate key to save equipment model", ex);
         }
     }
 }
